--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
         font-size: 14px;
         text-transform: none;
         padding: 10px 0;
+        text-align: start
     }
 
     .icon-Functions {
