Hoàng Nhi - Update code

--- a/FE/Views/Account/ForgetPassword.cshtml
+++ b/FE/Views/Account/ForgetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODELS.USER.Requests.UsernameRequest;
+﻿@model MODELS.USER.Requests.UsernameRequest
 @{
     Layout = "~/Views/Shared/_LayoutAccount.cshtml";
 }
@@ -48,40 +48,36 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 bg-white rounded-4" , style="padding: 15px 10px 24px 10px; box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; max-width: 360px">
-            @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "frmLogin" }))
+        <div class="col-md-6 bg-white rounded-4 p-0" , style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; max-width: 500px">
+            @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "frmForgetPassword", @class = "card" }))
             {
                 @Html.AntiForgeryToken()
-                <div class="d-flex flex-column align-items-center">
+                <div class="card-header" 
+                     style="padding: 18px 16px 18px 18px; line-height: 24px; font-size: 20px; font-weight: 600; color: black">Tìm kiếm tài khoản của bạn</div>
+                <div class="card-header" 
+                     style="padding: 18px 16px 18px 18px">
+                    <div style="margin-bottom: 18px; font-size: 17px; line-height: 20px">
+                        Vui lòng nhập địa chỉ Email hoặc số điện thoại của bạn để tìm tài khoản.
+                    </div>
                     <div class="form-outline p-1" data-mdb-input-init>
                         <input type="text" asp-for="Username" class="form-control" />
                         <label class="form-label" for="Username">Email hoặc số điện thoại*</label>
                     </div>
                     @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger", @style = "align-self: start;" })
-                    <button type="submit" class="btn btn-primary w-100 my-3" style="background-color: #473c38; color: white;" data-mdb-ripple-init>Đăng nhập</button>
-                    <div class="d-flex w-100 justify-content-between">
-                        <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" 
-                           href="@Url.Action("Register", "Account")" 
-                           style="color: black">
-                            Tạo tài khoản mới
-                        </a>
-                        <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" 
-                           href="@Url.Action("ForgetPassword", "Account")" 
-                           style="color: black">
-                            Quên mật khẩu?
-                        </a>
-                    </div>
+                </div>
+                <div class="card-footer" style="padding: 16px; text-align: end">
+                    <a href="@Url.Action("Login", "Account")"
+                       class="btn btn-light"
+                       data-mdb-ripple-init
+                       data-mdb-ripple-color="dark">Hủy</a>
+                    <button type="submit"
+                            class="btn btn-primary"
+                            style="background-color: #473c38; color: white;"
+                            data-mdb-ripple-init>
+                        Tiếp tục
+                    </button>
                 </div>
             }
-            <div class="divider w-100 my-3">Hoặc</div>
-            <a href="@Url.Action("SigninGoogle", "Account")" class="btn btn-outline-dark w-100" data-mdb-ripple-init data-mdb-ripple-color="dark">
-                <span class="pe-1">
-                    <img src="~/asset/GgIcon.png" height="25" width="25" />
-                </span>
-                <span class="ps-1">
-                    Đăng nhập bằng Google
-                </span>
-            </a>
         </div>
     </div>
 </div>
