Hoàng Nhi - Hoàn thành Quên mật khẩu

--- a/FE/Views/Account/ForgetPassword.cshtml
+++ b/FE/Views/Account/ForgetPassword.cshtml
@@ -52,16 +52,16 @@
             @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "frmForgetPassword", @class = "card" }))
             {
                 @Html.AntiForgeryToken()
-                <div class="card-header" 
+                <div class="card-header"
                      style="padding: 18px 16px 18px 18px; line-height: 24px; font-size: 20px; font-weight: 600; color: black">Tìm kiếm tài khoản của bạn</div>
-                <div class="card-header" 
+                <div class="card-header"
                      style="padding: 18px 16px 18px 18px">
                     <div style="margin-bottom: 18px; font-size: 17px; line-height: 20px">
-                        Vui lòng nhập địa chỉ Email hoặc số điện thoại của bạn để tìm tài khoản.
+                        Vui lòng nhập địa chỉ Email hoặc số điện thoại của bạn để chúng tôi có thể gửi mã OTP xác thực tài khoản.
                     </div>
                     <div class="form-outline p-1" data-mdb-input-init>
                         <input type="text" asp-for="Username" class="form-control" />
-                        <label class="form-label" for="Username">Email hoặc số điện thoại*</label>
+                        <label class="form-label" for="Username">Email hoặc số điện thoại</label>
                     </div>
                     @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger", @style = "align-self: start;" })
                 </div>
@@ -82,29 +82,33 @@
     </div>
 </div>
 
-
-
 <script>
     $(document).ready(function () {
-        $("#frmLogin").submit(async function (event) {
+        $("#frmForgetPassword").submit(async function (event) {
             event.preventDefault();
-            if ($("#frmLogin").valid()) {
-                DangNhap();
+            if ($("#frmForgetPassword").valid()) {
+                SendOTP();
             }
         });
     });
 
-    function DangNhap() {
-        var data = $("#frmLogin").serialize();
+    function SendOTP() {
+        var data = $("#frmForgetPassword").serialize();
         showLoading(true)
         $.ajax({
-            url: "@Url.Action("CheckUsername", "Account")",
+            url: "@Url.Action("SendOTP", "Account")",
             type: "POST",
             data: data,
             success: function (response) {
                 showLoading(false)
-                if (response.isSuccess) {
-                    window.location.href = "/Account/Login/Password?Username=" + $("#Username").val();
+                if (response.isSuccess === undefined) {
+                    // Rebind Validation
+                    var $form = $("#frmForgetPassword");
+                    $form.removeData('validator');
+                    $form.html(response);
+                    $("#OTP-Container").append('<div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 53px;"></div><div class="form-notch-trailing"></div></div>')
+                    $form.each(function () { $.data($(this)[0], 'validator', false); });
+                    $.validator.unobtrusive.parse("#frmForgetPassword");
                 } else {
                     ShowThongBaoThatBai(response.message)
                 }
@@ -113,5 +117,63 @@
                 ShowThongBaoThatBai(error)
             }
         })
+    }
+
+    function VerifyOTP() {
+        if ($("#frmForgetPassword").valid())
+        {
+            var data = $("#frmForgetPassword").serialize();
+            showLoading(true)
+            $.ajax({
+                url: "@Url.Action("VerifyOTP", "Account")",
+                type: "POST",
+                data: data,
+                success: function (response) {
+                    showLoading(false)
+                    if (response.isSuccess === undefined) {
+                        // Rebind Validation
+                        var $form = $("#frmForgetPassword");
+                        $form.removeData('validator');
+                        $form.html(response);
+                        $("#Password-Container").append('<div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 59px;"></div><div class="form-notch-trailing"></div></div>')
+                        $("#ConfirmPassword-Container").append('<div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 115px;"></div><div class="form-notch-trailing"></div></div>')
+                        $form.each(function () { $.data($(this)[0], 'validator', false); });
+                        $.validator.unobtrusive.parse("#frmForgetPassword");
+
+                    } else {
+                        ShowThongBaoThatBai(response.message)
+                    }
+                },
+                error: function (xhr, error) {
+                    ShowThongBaoThatBai(error)
+                }
+            })
+        }
+    }
+
+    function ChangePassword() {
+        var $form = $("#frmForgetPassword");
+        if ($("#frmForgetPassword").valid())
+        {
+            var data = $("#frmForgetPassword").serialize();
+            showLoading(true)
+            $.ajax({
+                url: "@Url.Action("ChangePassword", "Account")",
+                type: "POST",
+                data: data,
+                success: function (response) {
+                    showLoading(false)
+                    if (response.isSuccess) {
+                        var $form = $("#frmForgetPassword");
+                        $form.html('<div class="card-header" style="padding: 18px 16px 18px 18px; line-height: 24px; font-size: 20px; font-weight: 600; color: black">Tìm kiếm tài khoản của bạn</div><div class="card-header" style="padding: 0 16px 18px 18px"><div style="background-image: url(/asset/change-password-successfully.png);background-size: contain;background-repeat: no-repeat;background-position-x: center;height: 125px;"></div><p class="fw-bold" style="font-size: 18px ;text-align: center; color: black; margin-bottom: 8px">Đổi mật khẩu thành công</p><p style="text-align: center; margin-bottom: 8px">Bạn có thể đăng nhập tài khoản bằng mật khẩu mới của bạn</p><div style="text-align: center"><a href="@Url.Action("Index", "Account")" class="btn btn-primary" style="font-weight: bold; font-size: 12px" data-mdb-ripple-init>Đăng nhập </a></div></div>');
+                    } else {
+                        ShowThongBaoThatBai(response.message)
+                    }
+                },
+                error: function (xhr, error) {
+                    ShowThongBaoThatBai(error)
+                }
+            })
+        }
     }
 </script>
